--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
 
-Hi there!
+<input title='Deck Size' type="text" name="decksize" id="decksize" value="60" />
+<input type="button" name="deck_reset" id="deck_reset" value="Reset Deck" onclick="updateText('decksize','60');" />
+<script>
+    function updateText(targetID,textvalue) {
+    	$('#'.targetID).val(textvalue);
+    }
+</script>
 </body>
 </html>
