--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <input type="button" name="deck_reset" id="deck_reset" value="Reset Deck" onclick="updateText('decksize','60');" />
 <script>
     function updateText(targetID,textvalue) {
-    	alert('hi');
+    	$('#'+targetID).val(textvalue);
     }
 </script>
 </body>
