--- a/index.html
+++ b/index.html
@@ -7,12 +7,49 @@
 </head>
 <body>
 
-<input title='Deck Size' type="text" name="decksize" id="decksize" value="60" />
-<input type="button" name="deck_reset" id="deck_reset" value="Reset Deck" onclick="updateText('decksize','60');" />
-<input type="button" name="deck_minus" id="deck_minus" value="Draw Card" onclick="updateText('decksize',document.getelementById('deck_minus').value - 1);" />
+<table border="1">
+    Cards Left in Deck<br/>
+    <tr style="border:1px;">
+        <td>
+            <input title='Deck Size' type="text" name="decksize" id="decksize" value="60" />
+            <input type="button" name="deck_minus" id="deck_minus" value="Draw Card" onclick="updateText('decksize',document.getElementById('decksize').value - 1);" />
+            <input type="button" name="deck_reset" id="deck_reset" value="Reset Deck" onclick="updateText('decksize','60');" />
+        </td>
+    </tr>
+</table>
+<br/>
+<table border="1">
+    Mana Stored<br/>
+    <tr>
+        <td>
+            <img src="blue_mana.png" width="25" height="25" align="center"/>
+            <input title="Blue Mana" type="text" name="bluemana" id="bluemana" value="" />
+            <input type="button" name="blue_plus" id="blue_plus" value="+" onclick="updateText('bluemana',+document.getElementById('bluemana').value + 1);" />
+            <input type="button" name="blue_minus" id="blue_minus" value="-" onclick="updateText('bluemana',+document.getElementById('bluemana').value - 1);" />
+            <input type="button" name="blue_reset" id="blue_reset" value="Reset" onclick="updateText('bluemana','');" />
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img src="red_mana.png" width="25" height="25" align="center"/>
+            <input title="Red Mana" type="text" name="redmana" id="redmana" value="" />
+            <input type="button" name="red_plus" id="red_plus" value="+" onclick="updateText('redmana',+document.getElementById('redmana').value + 1);" />
+            <input type="button" name="red_minus" id="red_minus" value="-" onclick="updateText('redmana',+document.getElementById('redmana').value - 1);" />
+            <input type="button" name="red_reset" id="red_reset" value="Reset" onclick="updateText('redmana','');" />
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img src="black_mana.png" width="25" height="25" align="center"/>
+            <input title="Black Mana" type="text" name="blackmana" id="blackmana" value="" />
+            <input type="button" name="black_plus" id="black_plus" value="+" onclick="updateText('blackmana',+document.getElementById('blackmana').value + 1);" />
+            <input type="button" name="black_minus" id="black_minus" value="-" onclick="updateText('blackmana',+document.getElementById('blackmana').value - 1);" />
+            <input type="button" name="black_reset" id="black_reset" value="Reset" onclick="updateText('blackmana','');" />
+        </td>
+    </tr>
+</table>
 <script>
     function updateText(targetID,textvalue) {
-
     	$('#'+targetID).val(textvalue);
     }
 </script>
